# libgpnread

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README
src/: Makefile  gpnread.cpp  gpnread.h  main.cpp  master_data.cpp  master_data.h  utils.cpp  utils.h
tests/: utils.cpp
